--- a/index.html
+++ b/index.html
@@ -1,8 +1,56 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+
+<head>
+   <title> Trail Race Experiences</title>
+</head>
+
+<body>
+   <!-- Write your HTML in this file! -->
+   <h1>My Trail Race Experiences</h1>
+   <h2>Locations:</h2>
+   <ul>
+      <li>Rotorua - New Zealand</li>
+      <li>Squamish, British Columbia - Canada</li>
+      <li>Loudonville, OH</li>
+      <li>Woodstock, VA</li>
+      <li>Orcas Island, WA</li>
+      <li>Land O'Lakes, FL</li>
+   </ul>
+   <img
+      src="/Users/kurtphilly/Git-Exercises/js-assignment-4-html-me-something-kurtphilly/images/TARAWERA_2016_006127.jpg"
+      alt="Tarawera 50K in New Zealand" width="625" height="400">
+   <main>Running, and more specifically trail running, has become an outlet to cope and relieve stress,
+      explore new places, challenge my physical and mental abilities and create
+      wonderful memories with friends, new and old. Over the last six years I have had the opportunity to
+      run and take part in races that have become a powerful example of what we can accomplish if we apply
+      ourselves and keep moving forward. I hope to continue my running career while visiting new places and meeting
+      new people toward my destination.</main>
+
+   <article>
+      <h2>Other Interests:</h2>
+      <h3>Trails Races:</h3>
+      <p>I like to run long-distances. Usually 50K or longer. The feeling of finishing a race after running (and
+         walking) for 8hr-24hrs is unimaginable.</p>
+   </article>
+
+   <article>
+      <h3>Public Policy:</h3>
+      <p>How we shape the world we live in is one of the most critcally important factors to impact each and everyone of
+         us. Policy is about trade-offs, we
+         ultimately must decide what provides the greater benefit to all, even if the benefit to ourselves is minimal.
+      </p>
+   </article>
+
+   <article>
+      <h3>Coding:</h3>
+      <p>It is the power to create amazing things: that perform a task or a process repeatedly in perpetuity. To then
+         use that piece of code to help
+         build something else to perform a more complicated procedure. To do be able to say &quot;I can do code&quot;
+         means the ability to create amazing things.</p>
+   </article>
+
+   <footer><em>THE SITE WAS CREATED BY KURT OEHLBERG</em></footer>
+</body>
+
 </html>
