--- a/index.html
+++ b/index.html
@@ -2,63 +2,93 @@
 <html>
 
 <head>
-   <meta charset='utf-8'>
 
-   <link href="style.css" rel="stylesheet" type="text/css" />
-   <title> Trail Race Experiences</title>
+   <meta charset='utf-8'>
+   <link href="styles.css" rel="stylesheet" type="text/css" />
+
+
+   <h1 id="mainHeading">My Trail Race Experiences</h1>
+   <div style="text-align:center">
+      <img src="images/TARAWERA_2016_006127.jpg" alt="Terawera 50K" width="625px" height="400px">
+
+   </div>
+
 </head>
 
-<body>
-   <!-- Write your HTML in this file! -->
-   <header>
-      <h1>My Trail Race Experiences</h1>
-   </header>
-   <img
-      src="/Users/kurtphilly/Git-Exercises/js-assignment-4-html-me-something-kurtphilly/images/TARAWERA_2016_006127.jpg"
-      alt="Tarawera 50K in New Zealand" width="625" height="400">
-   <section id="box-section"></section>
-   <p id = "list-heading">Destinations</p>
-   <ul>
-      <li>Rotorua - New Zealand</li>
-      <li>Squamish, British Columbia - Canada</li>
-      <li>Loudonville, OH</li>
-      <li>Woodstock, VA</li>
-      <li>Orcas Island, WA</li>
-      <li>Land O'Lakes, FL</li>
-   </ul>
-   </section>
-   
-   <main>Running, and more specifically trail running, has become an outlet to cope and relieve stress,
-      explore new places, challenge my physical and mental abilities and create
-      wonderful memories with friends, new and old. Over the last six years I have had the opportunity to
-      run and take part in races that have become a powerful example of what we can accomplish if we apply
-      ourselves and keep moving forward. I hope to continue my running career while visiting new places and meeting
-      new people toward my destination.</main>
 
-   <section>
-      <h2>Other Interests:</h2>
-      <h3>Trails Races:</h3>
+
+
+<body>
+
+
+
+
+
+   <div class="content">
+      <div class="row">
+         <div class="cell">
+            <h2 id="list-heading">Destinations</h2>
+            <ul>
+               <p>
+                  <li>Rotorua - New Zealand</li>
+                  <li>Squamish, British Columbia - Canada</li>
+                  <li>Loudonville, OH</li>
+                  <li>Woodstock, VA</li>
+                  <li>Orcas Island, WA</li>
+                  <li>Land O'Lakes, FL</li>
+               </p>
+            </ul>
+         </div>
+
+         <div class="cell">
+            <main>
+               <p id="testP" class="funParagraph">Running, and more specifically trail running, has become an outlet to
+                  cope and relieve stress,
+                  explore new places, challenge my physical and mental abilities and create
+                  wonderful memories with friends, new and old. Over the last six years I have had the opportunity to
+                  run and take part in races that have become a powerful example of what we can accomplish if we apply
+                  ourselves and keep moving forward. I hope to continue my running career while visiting new places and
+                  meeting
+                  new people toward my destination.
+            </main>
+            </p>
+         </div>
+      </div>
+   </div>
+
+
+
+
+
+   <!-- <section id="box-section">
+
+      
+   </section> -->
+
+   <section id="box-section">
+      <h2>Other Interests</h2>
+      <h3 id="list-heading">Trails Races</h3>
       <p>I like to run long-distances. Usually 50K or longer. The feeling of finishing a race after running (and
          walking) for 8hr-24hrs is unimaginable.</p>
-   </section>
 
-   <section>
-      <h3>Public Policy:</h3>
+
+
+      <h3 id="list-heading">Public Policy</h3>
       <p>How we shape the world we live in is one of the most critcally important factors to impact each and everyone of
          us. Policy is about trade-offs, we
          ultimately must decide what provides the greater benefit to all, even if the benefit to ourselves is minimal.
       </p>
-   </section>
 
-   <section>
-      <h3>Coding:</h3>
+
+
+      <h3 id="list-heading">Coding</h3>
       <p>It is the power to create amazing things: that perform a task or a process repeatedly in perpetuity. To then
          use that piece of code to help
-         build something else to perform a more complicated procedure. To do be able to say &quot;I can do code&quot;
+         build something else to perform a more complicated procedure. To do be able to say &quot;I can code&quot;
          means the ability to create amazing things.</p>
    </section>
 
-   <footer><em>THE SITE WAS CREATED BY KURT OEHLBERG</em></footer>
+   <footer><em>THIS SITE WAS CREATED BY KURT OEHLBERG</em></footer>
 </body>
 
 </html>
